# Code-Mentor

./: README.md
code-mentor/: .gitignore  README.md  pyproject.toml  requirements.txt
code-mentor/data/: emotion.jsonl  examples_code.md
code-mentor/scripts/: quick_eval.py  train_emotion_quick.py
code-mentor/src/codementor/: __init__.py  app.py  mentor_agent.py  session_store.py  skill_model.py
code-mentor/src/codementor/analysis/: ast_metrics.py  static_tools.py  utils.py
code-mentor/src/codementor/fixer/: patcher.py
code-mentor/tests/: test_agent.py  test_ast_metrics.py  test_patcher.py  test_skill_model.py  test_utils.py
